# glscript-language-server

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/glproject/: entry.js  global_script.js  package.json
examples/glproject/.local/glproxy-workspace/: DEFAULT_INCLUDED.js  _debug.emitted.js  jsconfig.json
examples/glproject/.local/glproxy-workspace/debug/: entry.js.bundle.emitted.js  entry.js.transpile.emitted.js  global_script.js.bundle.emitted.js  global_script.js.transpile.emitted.js
examples/glproject/.local/glproxy-workspace/debug/.local/glproxy-workspace/: default_included.js.bundle.emitted.js  default_included.js.transpile.emitted.js
examples/glproject/.local/glproxy-workspace/debug/utils/: math.js.bundle.emitted.js  math.js.transpile.emitted.js
examples/glproject/utils/: math.js
examples/transpiler_cli/: package.json  source_file.js  transpiler_cli.js
src/: builder.rs  forward.rs  glscript_subset_grammar.pest  language_client.rs  language_server.rs  lib.rs  main.rs  parser.rs  proxy.rs  state.rs  types.rs
src/builder/: emit.rs  forwarding.rs  mod.rs  options_builder.rs  source_map_builder.rs
src/builder/emit/: content.rs  dev.rs  mod.rs  prepare.rs  source_map.rs
src/language_server/: common_features.rs  completion.rs  definition.rs  document_synchronization.rs  hover.rs  lifecycle.rs  references.rs
src/parser/: entry.rs  glscript_subset_grammar.pest  mod.rs  tokens.rs
src/proxy/: forward_layer.rs  language_client.rs  language_server.rs  macros.rs  mod.rs  tracing_formatter.rs
src/proxy/language_client/: apply_edit.rs  publish_diagnostics.rs
src/proxy/language_server/: code_action.rs  common_features.rs  completion.rs  definition.rs  doc_symbol.rs  doc_sync.rs  document_synchronization.rs  formatting.rs  hover.rs  inlay_hint.rs  lifecycle.rs  references.rs  selection_range.rs  semantic_tokens.rs  symbol.rs  ws_symbol.rs
src/state/: build.rs  caches.rs  configuration.rs  document.rs  lazy_build_changes.rs  mod.rs  progress.rs
src/unit_tests/: parser.rs
tests/: service_test.rs
tests/client_test_data/: jsconfig.json  main.js  package-lock.json  package.json  utils.js
tests/client_test_data/lib/: global.js
