[package]
name = "glscript-language-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-lsp = { version = "0.2.2", features = ["forward", "tracing", "tokio"] }
tokio = { version = "1.41.1", features = [
  "io-std",
  "macros",
  "rt-multi-thread",
] }
tokio-util = { version = "0.7.12", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.5"
tower-layer = "0.3.2"
tower-service = "0.3.2"
pin-project-lite = "0.2.9"
futures = { version = "0.3.28", default-features = false, features = [
  "async-await",
  "std",
] }
async-process = "2"
serde_json = "1.0.95"

dashmap = "6.1.0"

# parser
pest = "2.8.1"
pest_derive = "2.8.1"

# builder
sourcemap = "9.2.2"

anyhow = "1.0.100"

[dev-dependencies]
tokio = { version = "1.41.1", features = [
  "io-std",
  "macros",
  "parking_lot",
  "rt-multi-thread",
  "time",
  "signal",
  "io-util",
] }
