[package]
name = "glscript-language-server"
version = "0.1.1"
edition = "2024"

[dependencies]
async-lsp = { version = "0.2.2", features = ["forward", "tracing", "tokio"] }
tokio = { version = "1.41.1", features = [
  "io-std",
  "macros",
  "rt-multi-thread",
  "time",
] }
tokio-util = { version = "0.7.12", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "std"] }
chrono = "0.4.43"

tower = "0.5"
tower-layer = "0.3.2"
tower-service = "0.3.2"
pin-project-lite = "0.2.9"
futures = { version = "0.3.28", default-features = false, features = [
  "async-await",
  "std",
] }
async-process = "2"
serde_json = "1.0.95"

faster-pest = "0.1.4"
ropey = "1.6.1"

sourcemap = "9.2.2"
sha2 = "0.10.9"
fxhash = "0.2.1"
hex = "0.4.3"
base64 = "0.22.1"
memmap2 = "0.9.9"

anyhow = "1.0.100"
dashmap = { version = "6.1.0", features = ["rayon"] }
rayon = "1.11.0"
crossbeam = "0.8"
regex = "1.12.2"
dunce = "1.0.5"
ignore = "0.4"

derive_more = { version = "2.1.0", features = [
  "deref",
  "from",
  "into",
  "display",
  "constructor",
] }
convert_case = "^0.10"

[dev-dependencies]
tokio = { version = "1.41.1", features = [
  "io-std",
  "macros",
  "parking_lot",
  "rt-multi-thread",
  "time",
  "signal",
  "io-util",
] }
indoc = "2.0.6"
faster-pest-derive = "0.1.3"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 3
debug = true

# [[test]]
# name = "parser"
# path = "src/unit_tests/parser.rs"
